@@ -1,0 +1,23 @@
+Upgrading sventon to a newer version
+
+The sventon configuration settings are stored in the file
+svn/WEB-INF/classes/default-sventon.properties.
+The property key svn.configpath specifies where the repository
+index (sventon.idx) is stored.
+
+The easiest way to upgrade sventon is to replace the old svn.war
+file and walk through the configuration screens again. As long
+as the same repository url and configuration path is used, the
+index will be preserved.
+
+Another way is to make a backup copy of the configuration file
+svn/WEB-INF/classes/default-sventon.properties, replace the old
+svn.war with the new one to trigger a redeploy, and then add the
+backed up default-sventon.properties to the svn/WEB-INF/classes
+directory again.
+
+It's recommended to backup the configuration file and the index
+before upgrading.
+
+Support
+See http://sventon.berlios.de
